--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -5,9 +5,11 @@
 #
 # Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
 
-url: 'http://localhost:4000'
-filesurl: 'http://localhost:4000/files'
-urlimg: 'http://localhost:4000/files/'
+port: 8000
+
+url: 'http://localhost:8000'
+filesurl: '/files'
+urlimg: 'http://localhost:8000/files/'
 
 sass:
   # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
