--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,4 @@
 # ASCII-Font › http://patorjk.com/software/taag/#p=display&f=Slant&t=Phlow
-
-#
-# Build settings
-# - https://github.com/jekyll/jekyll-redirect-from
-#
-
-gems:
-  - jekyll-redirect-from
-
-whitelist:
-  - jekyll-redirect-from
-
-
 #
 #      _____ _ __          _____      __  __  _
 #     / ___/(_) /____     / ___/___  / /_/ /_(_)___  ____ ______
@@ -21,17 +8,17 @@ whitelist:
 #                                                 /____/
 #
 # Title of your website
-title: "Software Carpentry"
+title: "test"
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: "Teaching Lab Skills for Scientific Computing"
+slogan: "zzz"
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: "Software Carpentry is volunteer non-profit organization dedicated to teaching basic computing skills to researchers."
+description: "tests."
 
 # Main author of the website
 # See > authors.yml
-author: gvwilson
+author: djacquel
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
@@ -39,7 +26,7 @@ url: 'http://swctasks.github.io/assets/'
 baseurl: ''
 
 # This URL is the base for referenced files.
-filesurl: 'http://dev.software-carpentry.org/files'
+filesurl: '/files'
 
 # Software Carpentry-specific configuration values.
 # FIXME: eliminate some of these (duplicate social media information)
@@ -70,7 +57,7 @@ flag_size       : 16
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'http://dev.software-carpentry.org/files/'
+urlimg: '/files/'
 
 # Logo image (white with transparent background to stand out on blue background)
 logo: "logo-white.svg"
@@ -144,19 +131,6 @@ defaults:
 #  Open _data/navigation.yml to adjust the left and right topbar navigation
 #
 
-#     _____ __________
-#    / ___// ____/ __ \
-#    \__ \/ __/ / / / /
-#   ___/ / /___/ /_/ /
-#  /____/_____/\____/    Verify Website to Webmaster Tools
-
-# FIXME: what should this be?
-
-google_author:             "https://plus.google.com/u/0/118311555303973066167"
-google_site_verification:  "Vk0IOJ2jwG_qEoG7fuEXYqv0m2rLa8P778Fi_GrsgEQ"
-bing_webmastertools_id:    "0FB4C028ABCF07C908C54386ABD2D97F"
-# alexa_verify_id:         ""
-
 #       ______            _
 #      / ____/___ __   __(_)________  ____  _____
 #     / /_  / __ `/ | / / / ___/ __ \/ __ \/ ___/
@@ -179,43 +153,7 @@ apple-touch-icon-precomposed:           "apple-touch-icon-precomposed.png"
 msapplication_tileimage:                "msapplication_tileimage.png"               # Size 144x144
 msapplication_tilecolor:                "#fabb00"
 
-#       ______                __                __
-#      / ____/___ _________  / /_  ____  ____  / /__
-#     / /_  / __ `/ ___/ _ \/ __ \/ __ \/ __ \/ //_/
-#    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<
-#   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
-
-# FIXME: figure out what this is all about
-
-og_image:                           "http://images.phlow.de/phlow/phlow_de-logo-512x.png"
-og_locale:                          "en_EN"
-og_type:                            "website"
-og_title:                           "Feeling Responsive – A Responsive Theme for Jekyll"
-og_description:                     "Feeling Responsive is built on the fabulous Foundation Framework and comes with lots of features to show your content right."
-# og_url:                           ""
-# og_site_name:                     ""
-
-#      _____            _       __   __  ___         ___
-#     / ___/____  _____(_)___ _/ /  /  |/  /__  ____/ (_)___ _
-#     \__ \/ __ \/ ___/ / __ `/ /  / /|_/ / _ \/ __  / / __ `/
-#    ___/ / /_/ / /__/ / /_/ / /  / /  / /  __/ /_/ / / /_/ /
-#   /____/\____/\___/_/\__,_/_/  /_/  /_/\___/\__,_/_/\__,_/
-#
-#  Open _data/socialmedia.yml to adjust the left and right topbar navigation
-#
-
-#        ____  _
-#       / __ \(_)________ ___  _______
-#      / / / / / ___/ __ `/ / / / ___/
-#     / /_/ / (__  ) /_/ / /_/ (__  )
-#    /_____/_/____/\__, /\__,_/____/
-#                    /_/
-#
-# used in _includes/comments
-
-disqus_shortname: swcarpentry
-
-#      _____
+#       ______
 #     / ___/____ ___________
 #     \__ \/ __ `/ ___/ ___/
 #    ___/ / /_/ (__  |__  )     More › http://sass-lang.com/
@@ -225,31 +163,3 @@ disqus_shortname: swcarpentry
 sass:
     sass_dir: _sass
     style: :compressed
-
-#       ___                __      __  _
-#      /   |  ____  ____ _/ /_  __/ /_(_)_________
-#     / /| | / __ \/ __ `/ / / / / __/ / ___/ ___/
-#    / ___ |/ / / / /_/ / / /_/ / /_/ / /__(__  )
-#   /_/  |_/_/ /_/\__,_/_/\__, /\__/_/\___/____/      https://www.google.com/analytics/
-#                        /____/
-#
-# used in _includes/footer_scripts
-
-# FIXME: get a Google analytics tracking ID
-
-google_analytics_tracking_id: UA-60112281-1
-
-#   _                 _     _
-#  | |_ __ ___      _| | __| |_ ___
-#  | __/ _` \ \ /\ / / |/ /| __/ _ \
-#  | || (_| |\ V  V /|   < | || (_) |
-#   \__\__,_| \_/\_/ |_|\_(_)__\___/     More › https://www.tawk.to/knowledgebase/
-#
-#  tawk.to is a free live chat app that lets you monitor and chat
-#  with visitors on your website or from a free customizable page
-#
-#  To load the script add tawkto: true in front matter of each page
-#
-# used in _includes/footer_scripts
-
-# tawkto_embed_uri:
