--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-# cache: bundler
+cache: bundler
 sudo: false
 
 rvm:
@@ -17,4 +17,4 @@ notifications:
     on_success: change
     on_failure: change
 
-after_success: ./_scripts/push-from-assets-repository-to-styles-repository.sh
+after_success: ./scripts/push-from-assets-to-styles.sh
