Added more information to README and tidied up a couple of things noticed while doing so:
1.  Added links to README along with a little discussion about where things wind up.
2.  Renamed logo files to include `swc-` prefix so that we can eventually put `dc-logo-*.*` here without name conflict.
3.  Updated `_config.yml` to refer to renamed logo files.
4.  Removed execute permission from `.scss` and `.js` files (old habit).

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ filesurl: '/files'
 urlimg: '/files/'
 
 # Logo image (white with transparent background to stand out on blue background)
-logo: "logo-white.svg"
+logo: "swc-logo-white.svg"
 
 
 include:
