--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,26 @@
+
+#############################################
+# Assets configuration
+#############################################
+
+# extensionless url allows to automatically switch
+# to current page protocol (http or https)
+# to avoid mixed content problems
+# distant-assets-url: "//swcarpentry.github.io/styles/"
+
+# repository url
+# NO TRAILING SLASH
+distantAssetsUrl: "http://swctasks.github.io"
+
+# path : "/styles"
+# NO TRAILING SLASH
+# Leave empty if assets are at the root of the domain
+distantAssetsPath: "/assets/assets"
+
+#############################################
+# End configuration
+#############################################
+
 # ASCII-Font › http://patorjk.com/software/taag/#p=display&f=Slant&t=Phlow
 #
 #      _____ _ __          _____      __  __  _
@@ -14,7 +37,7 @@ title: "test"
 slogan: "zzz"
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: "tests."
+description: "Software Carpentry is volunteer non-profit organization dedicated to teaching basic computing skills to researchers."
 
 # Main author of the website
 # See > authors.yml
