--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -5,15 +5,13 @@
 #
 # Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
 
-port: 8000
-
-url: 'http://0.0.0.0:8000'
+url: 'http://0.0.0.0:4000'
 filesurl: '/files'
-urlimg: 'http://0.0.0.0:8000/files/'
+urlimg: 'http://0.0.0.0:4000/files/'
 
 sass:
   # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
-  style: :expanded
+  style: :nested
   line_numbers: true
   # trace_selectors: true
   # debug_info: true
@@ -22,3 +20,21 @@ sass:
 
 # Disable when not in production
 google_analytics_tracking_id:
+
+#############################################
+# Assets configuration for local development
+#############################################
+
+# extensionless url allows to automatically switch
+# to current page protocol (http or https)
+# to avoid mixed content problems
+# distant-assets-url: "//swcarpentry.github.io/styles/"
+
+# repository url
+# NO TRAILING SLASH
+distantAssetsUrl: "http://0.0.0.0:4000"
+
+# path : "/styles"
+# NO TRAILING SLASH
+# Leave empty if assets are at the root of the domain
+distantAssetsPath: "/assets"
